--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "get-date": "^1.0.2",
     "jsonwebtoken": "^7.4.1",
     "jszip": "^3.1.3",
+    "moment": "^2.22.1",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
     "ng2-file-upload": "^1.2.1",
