--- a/api/data/settings.json
+++ b/api/data/settings.json
@@ -1,1 +1,33 @@
-{"auto_close_attendance_time":"00:00","selected_host":"Office365","emails":[{"host_name":"Office365","config":{"host":"smtp.office365.com","port":587,"secure":false,"auth":{"user":"1353019@student.hcmus.edu.vn","pass":"Nghia1507"},"tls":{"ciphers":"SSLv3"}},"signature":"If you need help, please contact giaovu.clc@fit.hcmus.edu.vn"},{"host_name":"Gmail","config":{"service":"Gmail","auth":{"user":"","pass":""}},"signature":"If you need help, please contact giaovu.clc@fit.hcmus.edu.vn"}]}
+{
+    "auto_close_attendance_time": "00:00",
+    "selected_host": "ItecGmail",
+    "emails": [
+        {
+            "host_name": "Office365",
+            "config": {
+                "host": "smtp.office365.com",
+                "port": 587,
+                "secure": false,
+                "auth": {
+                    "user": "1353019@student.hcmus.edu.vn",
+                    "pass": "Nghia1507"
+                },
+                "tls": {
+                    "ciphers": "SSLv3"
+                }
+            },
+            "signature": "If you need help, please contact giaovu.clc@fit.hcmus.edu.vn"
+        },
+        {
+            "host_name": "ItecGmail",
+            "config": {
+                "service": "gmail",
+                "auth": {
+                    "user": "1259035@itec.hcmus.edu.vn",
+                    "pass": "trungtruc201hai"
+                }                                                                                  
+            },
+            "signature": "If you need help, please contact giaovu.clc@fit.hcmus.edu.vn"
+        }
+    ]
+}
