--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "supervisor": "^0.12.0",
     "swagger-jsdoc": "^1.9.3",
     "ts-xlsx": "0.0.10",
+    "validator": "^10.2.0",
     "word-count": "^0.2.2",
     "xlsx": "^0.10.6",
     "xlsx-populate": "^1.10.0",
