--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ng2-file-upload": "^1.2.1",
     "ng2-img-cropper": "^0.9.0",
     "ngx-bootstrap": "^1.6.6",
+    "ngx-image-cropper": "^0.2.6",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.0.1",
     "pg": "^7.0.1",
